bullet 3 from #190.  Have not yet created the tests for the new accounts model methods.
