# routes/accounts.go
@@ -38,15 +38,17 @@ type accountPaidRes struct {
 }
 
 type accountGetObj struct {
-	CreatedAt            time.Time               `json:"createdAt"`
-	UpdatedAt            time.Time               `json:"updatedAt"`
-	ExpirationDate       time.Time               `json:"expirationDate" binding:"required"`
-	MonthsInSubscription int                     `json:"monthsInSubscription" binding:"required,gte=1" example:"12"`                                                        // number of months in their subscription
-	StorageLimit         models.StorageLimitType `json:"storageLimit" binding:"required,gte=100" example:"100"`                                                             // how much storage they are allowed, in GB
-	StorageUsed          float64                 `json:"storageUsed" binding:"exists" example:"30"`                                                                         // how much storage they have used, in GB
-	EthAddress           string                  `json:"ethAddress" binding:"required,len=42" minLength:"42" maxLength:"42" example:"a 42-char eth address with 0x prefix"` // the eth address they will send payment to
-	Cost                 float64                 `json:"cost" binding:"required,gte=0" example:"2.00"`
-	ApiVersion           int                     `json:"apiVersion" binding:"required,gte=1"`
+	CreatedAt                time.Time               `json:"createdAt"`
+	UpdatedAt                time.Time               `json:"updatedAt"`
+	ExpirationDate           time.Time               `json:"expirationDate" binding:"required"`
+	MonthsInSubscription     int                     `json:"monthsInSubscription" binding:"required,gte=1" example:"12"`                                                        // number of months in their subscription
+	StorageLimit             models.StorageLimitType `json:"storageLimit" binding:"required,gte=100" example:"100"`                                                             // how much storage they are allowed, in GB
+	StorageUsed              float64                 `json:"storageUsed" binding:"exists" example:"30"`                                                                         // how much storage they have used, in GB
+	EthAddress               string                  `json:"ethAddress" binding:"required,len=42" minLength:"42" maxLength:"42" example:"a 42-char eth address with 0x prefix"` // the eth address they will send payment to
+	Cost                     float64                 `json:"cost" binding:"required,gte=0" example:"2.00"`
+	ApiVersion               int                     `json:"apiVersion" binding:"required,gte=1"`
+	TotalMetadatas           int                     `json:"totalMetadatas" binding:"exists" example:"2"`
+	TotalMetadataSizeInBytes int64                   `json:"totalMetadataSizeInBytes" binding:"exists" example:"245765432"`
 }
 
 type accountGetReqObj struct {
@@ -203,15 +205,17 @@ func checkAccountPaymentStatus(c *gin.Context) error {
 		PaymentStatus: createPaymentStatusResponse(paid, pending),
 		Error:         err,
 		Account: accountGetObj{
-			CreatedAt:            account.CreatedAt,
-			UpdatedAt:            account.UpdatedAt,
-			ExpirationDate:       account.ExpirationDate(),
-			MonthsInSubscription: account.MonthsInSubscription,
-			StorageLimit:         account.StorageLimit,
-			StorageUsed:          account.StorageUsed,
-			EthAddress:           account.EthAddress,
-			Cost:                 cost,
-			ApiVersion:           account.ApiVersion,
+			CreatedAt:                account.CreatedAt,
+			UpdatedAt:                account.UpdatedAt,
+			ExpirationDate:           account.ExpirationDate(),
+			MonthsInSubscription:     account.MonthsInSubscription,
+			StorageLimit:             account.StorageLimit,
+			StorageUsed:              account.StorageUsed,
+			EthAddress:               account.EthAddress,
+			Cost:                     cost,
+			ApiVersion:               account.ApiVersion,
+			TotalMetadatas:           account.TotalMetadatas,
+			TotalMetadataSizeInBytes: account.TotalMetadataSizeInBytes,
 		},
 	})
 }
